--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Nguoi tao ra bug </title>
 </head>
 <body>
+    <h1> Anh yeu em</h1>
     <div>
         Hello world from HTML
     </div>
     <script>
-        console.write('hello world from JS')
+        console.log('hello world from JS')
     </script>
     
 </body>
