--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nguoi tao ra bug </title>
 </head>
+
+<script src = "video5/video5.js"></script>
+
 <body>
     <h1> Anh yeu em</h1>
-    <div>
-        Hello world from HTML
-    </div>
-    <script>
-        console.log('hello world from JS')
-    </script>
     
+   
 </body>
 </html>
